[package]
name = "grrs"
version = "0.1.0"
authors = ["huhn511 <sehe89@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
failure = "0.1.7"
exitfailure = "0.5.1"
indicatif = "0.14.0"
log = "0.4.8"
env_logger = "0.7.1"

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"
tempfile = "3"
